# mairex

./: .dockerignore  .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  SYNTAX_REFERENCE.md  TUTORIAL.md  comp.py  hello_world.jsom  jsom_docs  pyproject.toml  shell.py
mairex/: __init__.py  cli.py  comp.py  function_extractor.py  variable_handle.py
