[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mairex"
version = "0.1.0"
description = "A high-level orchestration language for AI models and system commands"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "ai",
    "orchestration",
    "automation",
    "llm",
    "ai-agents",
    "shell",
    "workflow",
    "pipeline",
    "ollama",
    "openai",
    "anthropic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "ollama>=0.1.0",
    "litellm>=1.0.0",
    "lizard>=1.17.0",
    "whats-that-code>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/builderstar/mairex"
Documentation = "https://github.com/builderstar/mairex/blob/main/README.md"
Repository = "https://github.com/builderstar/mairex"
Issues = "https://github.com/builderstar/mairex/issues"

[project.scripts]
mairex = "mairex.cli:main"

[tool.setuptools]
packages = ["mairex"]

[tool.setuptools.package-data]
mairex = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
